--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev & npx next-video sync -w",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -31,10 +31,10 @@
     "crisp-sdk-web": "^1.0.25",
     "docx": "^8.5.0",
     "formidable": "^3.5.1",
+    "hls.js": "^1.5.14",
     "lucide-react": "^0.379.0",
     "mammoth": "^1.8.0",
     "next": "^14.2.3",
-    "next-video": "^1.1.4",
     "openai": "^4.50.0",
     "pdf-lib": "^1.17.1",
     "pdf-parse": "^1.1.1",
